# reseller-api

./: .env-sample  .gitignore  LICENSE  README.md  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  pytest.ini
apps/: asgi.py  settings.py  wsgi.py
apps/api/: conftest.py  jwt_token.py  urls.py  validators.py
apps/api/purchase/: apps.py  exceptions.py  models.py  serializers.py  urls.py  viewsets.py
apps/api/purchase/migrations/: 0001_initial.py  0002_purchase_purchase_uuid.py
apps/api/purchase/tests/: conftest.py  test_purchase_viewset.py
apps/api/reseller/: apps.py  models.py  serializers.py  urls.py  viewsets.py
apps/api/reseller/migrations/: 0001_initial.py
apps/api/reseller/tests/: test_reseller_viewset.py
config/: asgi.py  settings.py  urls.py  wsgi.py
nginx/: Dockerfile  prod.conf
